<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_type"
        android:src="@drawable/nothing_special" />

    <Button
        android:id="@+id/view_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_ok"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginLeft="28dp"
        android:onClick="viewContacts"
        android:text="@string/view_contacts" />

    <Button
        android:id="@+id/button.add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_contacts"
        android:layout_alignLeft="@+id/view_contacts"
        android:onClick="addContact"
        android:text="@string/new_contact" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button.add"
        android:layout_alignLeft="@+id/button.add"
        android:onClick="displayAboutUs"
        android:text="@string/about_app" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_contacts"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="54dp"
        android:onClick="activateDownloadService"
        android:text="@string/download_button" />

</RelativeLayout>